monthly covers story img height fixes

--- a/src/app/pages/story/item/item.component.scss
+++ b/src/app/pages/story/item/item.component.scss
@@ -9,6 +9,11 @@
     max-height: 754px;
     overflow: hidden;
     // padding: 0;
+    img{
+      @include mobile-portrait{
+        height: 300px;
+      }
+    }
   }
 
   .userDetail {
